@@ -1,12 +1,14 @@
 package com.fullstack.projet.models;
 
 import com.fullstack.projet.exceptions.ValidationException;
+import com.fullstack.projet.models.user.User;
+import io.micrometer.common.util.StringUtils;
 import jakarta.persistence.*;
 import lombok.Data;
 
 @Data
 @Entity(name = "feedback")
-public class Feedback {
+public class Feedback implements ValidatableObject{
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -21,8 +23,17 @@ public class Feedback {
     @ManyToOne
     private User user;
 
+    public Feedback(){}
+
     public Feedback(String comment, Tool tool, User user) {
-        if (comment == null || comment.isBlank()) {
+        this.comment = comment;
+        this.tool = tool;
+        this.user = user;
+    }
+
+    @Override
+    public void validate() {
+        if (StringUtils.isBlank(comment)) {
             throw new ValidationException("Comment cannot be null or empty.");
         }
         if (tool == null) {
@@ -31,9 +42,37 @@ public class Feedback {
         if (user == null) {
             throw new ValidationException("User cannot be null.");
         }
+    }
 
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getComment() {
+        return comment;
+    }
+
+    public void setComment(String comment) {
         this.comment = comment;
+    }
+
+    public Tool getTool() {
+        return tool;
+    }
+
+    public void setTool(Tool tool) {
         this.tool = tool;
+    }
+
+    public User getUser() {
+        return user;
+    }
+
+    public void setUser(User user) {
         this.user = user;
     }
 }
